--- a/important.conf
+++ b/important.conf
@@ -1,17 +1,24 @@
 * You should adjust the "volumes" section in docker-compose file as per the below:
 
 volumes:
-- /home/data1:/home/postgres/data
+- /patroni/data1:/home/postgres/data
 
 
-* /home/data1
-  /home/data2
-  /home/data3
+* /patroni/data1
+  /patroni/data2
+  /patroni/data3
 
 In GlusterFS this folders must be created and:
 
-sudo chown -R 999:999 <HostPath> 
-sudo chmod -R 700 <HostPath>
+sudo chown -R 999:999 /patroni/data1
+sudo chmod -R 700 /patroni/data1
+
+sudo chown -R 999:999 /patroni/data2
+sudo chmod -R 700 /patroni/data2
+
+sudo chown -R 999:999 /patroni/data2
+sudo chmod -R 700 /patroni/data2
+
 
 This group and permissions must be set, otherwise Patroni won't start up.
 
